# safenav-openenv

safenav-openenv/: Dockerfile  inference.py  openenv.yaml  pyproject.toml  readme.md
safenav-openenv/data/: routes.json
safenav-openenv/my_env/: api.py  env.py  graders.py  models.py  tasks.py
safenav-openenv/server/: app.py  tempCodeRunnerFile.py
