[project]
name = "safenav-openenv"
version = "0.1.0"
description = "Safe route selection OpenEnv environment"
authors = [
  { name = "Chetna Singh" }
]

requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0,<2.0.0",
  "openenv-core>=0.2.0",
  "httpx>=0.24.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ✅ ADD THIS
[project.scripts]
server = "server.app:main"